# testproject

./: .gitignore  debug_db.py  forecast.py  prepare_for_dbeaver.py  pyproject.toml  test.py  test_db_connection.py  test_models.py
data/: forecast_results.csv
src/: main.py
src/database/: db_connection.py  models.py
