[project]
name = "my_project"
version = "0.1.0"
description = "Тестовый проект"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "python-dotenv",
    "psycopg2-binary",
    "matplotlib",
    "statsmodels",
    "pmdarima",
]

[build-system]
requires = ["uv"]
build-backend = "uv"

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.uv.run]
script = "src.main"