[project]
name = "my_project"
version = "0.1.0"
description = "Тестовый проект"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "python-dotenv",
    "psycopg2-binary",
    "matplotlib",
    "statsmodels",
    "prophet",
    "pmdarima>=2.0.4",
]

[tool.uv.extra-build-dependencies]
# Зависимости, необходимые для сборки pmdarima
pmdarima = ["numpy", "Cython"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]  
build-backend = "setuptools.build_meta" 

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
